feat: add old contents
also update title and remove somekind of template originals.

--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -5,11 +5,11 @@
   facebook: ghost
   website: https://ghost.org/
   location: San Francisco
-- id: Another Author
-  avatar: avatars/ghost.png
-  bio: This is another test author with a profile background image
-  twitter: TryGhost
-  facebook: ghost
-  website: https://ghost.org/
-  location: San Francisco
+- id: Dan
+  avatar: avatars/dan.png
+  bio: Blog master
+  twitter: None
+  facebook: tkrhkdjanr
+  website: https://dankim.gtsb.io/
+  location: Seould
   profile_image: img/alex-knight-326705-unsplash.jpg
