--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -1,3 +1,9 @@
 - id: speeches
   description: Some of the greatest words ever spoken.
   image: img/speeches-cover.jpg
+- id: python
+  description: Python programming language.
+- id: designPattern
+  description: programming design pattern
+- id: builtIn
+  description: include built in function, class etc.
