--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "gatsby-plugin-google-analytics": "3.3.0",
     "gatsby-plugin-postcss": "4.3.0",
     "gatsby-plugin-react-helmet": "4.3.0",
-    "gatsby-plugin-sharp": "3.3.0",
+    "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-sitemap": "3.3.0",
     "gatsby-plugin-typescript": "3.3.0",
     "gatsby-remark-copy-linked-files": "4.0.0",
-    "gatsby-remark-images": "5.0.0",
+    "gatsby-remark-images": "^5.0.0",
     "gatsby-remark-prismjs": "5.0.0",
     "gatsby-remark-reading-time": "1.1.0",
     "gatsby-remark-responsive-iframe": "4.0.0",
