--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-sitemap": "3.3.0",
     "gatsby-plugin-typescript": "3.3.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "4.0.0",
     "gatsby-remark-images": "^5.0.0",
     "gatsby-remark-prismjs": "5.0.0",
