--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "date-fns": "2.21.1",
     "emotion": "11.0.0",
     "emotion-server": "11.0.0",
-    "gatsby": "3.3.0",
+    "gatsby": "^3.8.1",
     "gatsby-image": "3.3.0",
     "gatsby-plugin-canonical-urls": "3.3.0",
     "gatsby-plugin-emotion": "6.3.0",
@@ -49,7 +49,7 @@
     "polished": "4.1.1",
     "postcss-color-function": "4.1.0",
     "prism-themes": "1.6.0",
-    "prismjs": "1.23.0",
+    "prismjs": "^1.24.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-emotion": "10.0.0",
